[metadata]
name = AzimPy
version = 0.1.0
description = Estimate OBS sensor orientation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Yasunori Sawaki
#author_email = 
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    numpy
    matplotlib >= 3.5
    pandas
    scipy
    tqdm
    obspy >= 1.3
    astropy