[metadata]
name = AzimPy
version = 0.2.0
description = Estimate OBS sensor orientation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Yasunori Sawaki
#author_email = 
keywords = seismology, ocean bottom seismograph, Rayleigh wave, marine seismology
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    obspy >= 1.3
    astropy >= 5.0
    matplotlib >= 3.5
    scipy >= 1.4
    pandas
    numpy
    tqdm
python_requires = >= 3.8